# rctorch

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
ml_force/: __init__.py  optimizers.py  plots.py  reservoir.py  supervisors.py  utils.py
ml_force/models/: __init__.py  base.py  lif.py  morris_lecar.py
rctorch/: __init__.py  optimizers.py  plots.py  utils.py
rctorch/models/: __init__.py  base.py  lif.py
tests/: test_models.py  test_optimizers.py  test_reservoir.py  test_supervisors.py
